--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Linda Thompson",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.15.0",
-    "gulp": "^3.9.1"
-  }
+    "browser-sync": "^2.26.3",
+    "gulp": "^4.0.0"
+  },
+  "dependencies": {}
 }
