--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "startpage",
+  "name": "start-pages",
   "version": "1.0.0",
-  "description": "personal startpage",
+  "description": "Start pages for home and work",
   "main": "index.html",
   "scripts": {
     "start": "snowpack dev"
@@ -9,6 +9,7 @@
   "author": "Linda Thompson",
   "license": "ISC",
   "devDependencies": {
-    "snowpack": "^3.0.13"
-  }
+    "snowpack": "^3.8.8"
+  },
+  "dependencies": {}
 }
