--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Linda Thompson",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.0.4"
+  },
+  "dependencies": {
+    "vue-router": "^4.1.6"
   }
 }
